force-app/main/default/objects/AV_TriggerDispatcherAssociation__mdt/AV_TriggerDispatcherAssociation__mdt.object-meta.xml
<CustomObject>
    <description>custom metadata para el trigger dispatcher association</description>
    <label>Trigger Dispatcher Association</label>
    <pluralLabel>Trigger Dispatcher Associations</pluralLabel>
</CustomObject>