force-app/main/default/objects/AV_TriggerDispatcherAssociation__mdt/fields/AV_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>AV_Dispatcher__c</fullName>
    <description>Campo para obtener el dispatcher</description>
    <label>Dispatcher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>