force-app/main/default/objects/AV_TriggerDispatcherAssociation__mdt/fields/AV_FieldValues__c.field-meta.xml
<CustomField>
    <fullName>AV_FieldValues__c</fullName>
    <description>indica los valores del campo</description>
    <label>Field Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>