force-app/main/default/objects/AV_TriggerDispatcherAssociation__mdt/fields/AV_FilterField__c.field-meta.xml
<CustomField>
    <fullName>AV_FilterField__c</fullName>
    <description>muestra el filtro del campo</description>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>