force-app/main/default/objects/AV_TriggerDispatcherAssociation__mdt/fields/AV_TriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>AV_TriggerHandler__c</fullName>
    <description>Handler&apos;s Apex class name</description>
    <label>Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>